Added extra memory to surefire configuration.