@@ -268,6 +268,9 @@
 						<version>2.15</version>
 					</dependency>
 				</dependencies>
+				<configuration>
+				  <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512m</argLine>
+				</configuration>
 			</plugin>
     </plugins>
     <pluginManagement>
